src/css/view/breadcrumbs.scss
.eael-breadcrumbs {
   display: flex;
   &__prefix {
      display: flex;
   }
   &__content {
      display: flex;
      color: #434347;
      font-size: 15px;
      margin-bottom: 0;
      background-color: #f8f8fa;
      padding: 5px 15px;
      border: 1px solid #edecf6;
      border-radius: 8px;
      a {
         color: #a5a4b0;
      }
   }
}

.woocommerce {
   .woocommerce-breadcrumb {
      &.eael-breadcrumbs {
         &__content {
            color: #434347;
            font-size: 15px;
            margin-bottom: 0;
            background-color: #f8f8fa;
            padding: 5px 15px;
            border: 1px solid #edecf6;
            border-radius: 8px;
            a {
               color: #a5a4b0;
            }
         }
      }
   }
}

